BusOne/src/objects/Company_Collaboration_vod__c.object
<CustomObject>
    <description>Stores information about relationship strength of Person to Company</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Stakeholder</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Collaborations</relationshipLabel>
        <relationshipName>Company_Collaborations_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name_vod__c</fullName>
        <description>Name of Pharmaceutical company Stakeholder has a relationship with</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_vod__c</fullName>
        <description>Details of relationship</description>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength_vod__c</fullName>
        <description>Strength of relationship between stakeholder and company</description>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None_vod</fullName>
                </value>
                <value>
                    <fullName>Strong_vod</fullName>
                </value>
                <value>
                    <fullName>Weak_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Company Collaboration</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Company Collaboration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Collaborations</pluralLabel>
    <recordTypes>
        <fullName>KOL_Company_Collaboration_vod</fullName>
        <active>true</active>
        <description>Used for KOL Collaboration</description>
        <label>KOL_Company_Collaboration_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>